# phi-deid-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
samples/: sample_note.txt
scripts/: run_eval.py
src/phi_deid/: __init__.py  api.py  cli.py  evaluate.py  nlp.py  pipeline.py  pseudonymize.py  recognizers.py  synthetic.py
tests/: test_evaluate.py  test_pipeline.py  test_pseudonymize.py  test_recognizers.py
