[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phi-deid"
version = "0.1.0"
description = "Hybrid PHI de-identification pipeline for clinical text (Phase 1 baseline)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "faker>=24.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.scripts]
phi-deid = "phi_deid.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
